syntax = "proto3";
option go_package = "iceline-hosting.com/backend/proto/activity";
package activity;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ActivityManager {
    rpc RegisterUserActivity(RegisterUserActivityRequest) returns (google.protobuf.Empty) {}
    rpc RegisterGsActivity(RegisterGsActivityRequest) returns (google.protobuf.Empty) {}
}


message RegisterUserActivityRequest {
    string user_id = 1;
    string activity_type = 2;
    google.protobuf.Timestamp log_time = 3;
}

message RegisterGsActivityRequest {
    string user_id = 1;
    string server_name = 2;
    string activity_type = 3;
    google.protobuf.Timestamp log_time = 4;
}
